--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
 body {
-  background: radial-gradient(ellipse at bottom, #0e292b 54%, #011517 80%);
+  background-color: #011517;
 }
 h1,
 h2 {
   font-family: "Mango Grotesque";
 }
 .header {
-  /* background: radial-gradient(ellipse at bottom, #0e292b 54%, #011517 80%); */
+  background: radial-gradient(ellipse at top, #0e292b 54%, #011517 72%);
   height: 100vh;
   display: flex;
   align-items: center;
@@ -21,7 +21,7 @@ h2 {
 }
 .glow .minor {
   display: block;
-  font-size: 100px;
+  font-size: 8.5rem;
   font-style: italic;
   word-spacing: 3px;
 }
@@ -141,5 +141,137 @@ h2 {
   padding: 0px 08px;
 }
 h1.class-grid-heading {
-  font-size: 6rem;
+  font-size: 8.5rem;
+}
+/* shadow cards */
+.card-grouping {
+  position: relative;
+  background: radial-gradient(
+    ellipse at center,
+    rgba(0, 0, 0, 0) 54%,
+    rgba(01, 21, 23, 1) 80%
+  );
+  /* Background color matching your design */
+  overflow: hidden;
+  height: 870px;
+}
+
+/* .card-grouping:before {
+  content: "";
+  position: absolute;
+  top: 50px;
+  left: 0;
+  right: 0;
+  bottom: 50px;
+
+  transform: scale(1.2);
+  pointer-events: none;
+  z-index: 9999;
+} */
+
+.card-grouping .card {
+  /* Ensures cards are above the gradient */
+  background-color: #112226;
+  padding: 20px;
+  border-radius: 10px;
+  color: white;
+  margin: 10px 0;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+  /* Adds depth to cards */
+}
+
+.card-grouping .card {
+  position: relative;
+  z-index: -1;
+  height: 270px;
+  margin-bottom: 10px;
+  background-color: #0a2224;
+}
+
+.card-grouping .col {
+  padding: 0px 7px;
+}
+
+.card-text-grouping {
+  padding: 10px 30px;
+  padding-top: 30px;
+}
+
+.heading-text-grouping {
+  top: 40px;
+  position: relative;
+  z-index: 99999;
+  width: 100%;
+  text-align: center;
+}
+.heading-text-grouping h1 {
+  font-size: 8.5rem;
+  line-height: 120px;
+}
+.graphic {
+  position: relative;
+}
+.graphic1:after {
+  position: absolute;
+  content: "";
+  background-image: url(./images/cardtwo/1.png);
+  right: -280px;
+  width: 100%;
+  height: 240px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  top: 0;
+}
+.graphic2:after {
+  position: absolute;
+  content: "";
+  background-image: url(./images/cardtwo/2.png);
+  right: -230px;
+  width: 100%;
+  height: 240px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  top: 0;
+}
+.graphic3:after {
+  position: absolute;
+  content: "";
+  background-image: url(./images/cardtwo/3.png);
+  right: -280px;
+  width: 100%;
+  height: 240px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  top: 0;
+}
+.graphic4:after {
+  position: absolute;
+  content: "";
+  background-image: url(./images/cardtwo/4.png);
+  right: -280px;
+  width: 100%;
+  height: 240px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  top: 0;
+}
+.card-grouping .card {
+  overflow: hidden;
+  padding-right: 100px;
+}
+.card-content h2 {
+  font-size: 50px;
+  font-style: italic;
+  letter-spacing: 2px;
+  line-height: 50px;
+}
+.card-content p {
+  font-size: 19px;
+}
+.heading-text-grouping p {
+  font-size: 23px;
 }
