--- a/src/App.css
+++ b/src/App.css
@@ -592,6 +592,145 @@ footer {
   color: white;
   padding: 20px 120px;
 }
+
+/* Timeline */
+.SDLC {
+  margin-top: 50px;
+  margin-bottom: 130px;
+}
+
+/* Timeline Container */
+.timeline-container {
+  position: relative;
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
+/* Vertical Line */
+.timeline-container::before {
+  content: "";
+  position: absolute;
+  width: 4px;
+  background: #44e2b1;
+  top: 0;
+  bottom: 0;
+  left: 49%;
+  transform: translateX(-50%);
+  z-index: 1;
+}
+
+.timeline-dot {
+  background: linear-gradient(to bottom, #b7baca, #92eeee);
+}
+
+/* Center Column (Dots) */
+.timeline-center {
+  position: relative;
+  z-index: 2;
+  height: 150px; /* Adjust height for spacing */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Timeline Dot */
+.timeline-dot {
+  width: 24px;
+  height: 24px;
+  z-index: 3;
+  border: 3px solid #fff; /* Adds a border for better visibility */
+  background: linear-gradient(to bottom, #b7baca, #92eeee);
+}
+
+/* Timeline Item Spacing */
+.timeline-item {
+  position: relative;
+  margin-bottom: 50px;
+}
+
+.SDLC .card {
+  background-color: transparent;
+  border: 1px solid #44e2b1;
+  color: white;
+  padding: 20px 30px;
+}
+
+.SDLC .step-heading {
+  font-size: 7rem;
+}
+
+/* Responsive Styles */
+@media (max-width: 768px) {
+  /* .timeline-container {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .timeline-container::before {
+    left: 10px;
+    transform: none;
+  }
+
+  .timeline-item {
+    flex-direction: column;
+    align-items: flex-start;
+    text-align: left;
+  }
+
+  .timeline-item .timeline-dot {
+    margin-left: 10px;
+  }
+
+  .timeline-item .card {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+
+  .timeline-item .step-heading {
+    font-size: 2.5rem; 
+    text-align: center;
+  }
+
+  .timeline-center {
+    height: 100px; 
+  } */
+}
+
+@media (max-width: 576px) {
+  .timeline-container {
+    position: relative;
+    padding-left: 10px;
+    padding-right: 0px;
+  }
+  .SDLC .card {
+    padding: 20px 10px;
+  }
+  .SDLC .step-heading {
+    font-size: 4rem;
+  }
+  /* .timeline-container::before {
+    left: 5px;
+  }
+
+  .timeline-item .card {
+    padding: 15px;
+  }
+
+  .timeline-dot {
+    width: 20px;
+    height: 20px;
+    border: 2px solid #fff;
+  }
+
+  .timeline-center {
+    height: 80px;
+  }
+
+  .SDLC .step-heading {
+    font-size: 2rem; 
+  } */
+}
+
 /* Responsive design */
 @media all and (min-width: 300px) and (max-width: 600px) {
   .glow .minor {
